# bootlick

./: Cargo.toml  README.md
examples/stm32g4/bootloader/: Cargo.toml  ext_flash.toml  int_flash.toml  memory.x
examples/stm32g4/bootloader/.cargo/: config.toml
examples/stm32g4/bootloader/src/: bsp.rs  fake.rs  main.rs  partitions.rs  state.rs
src/: lib.rs  mock.rs
src/boot/: cortex_m.rs  mod.rs
src/mock/: mod.rs  multi_scratch.rs  single_scratch.rs  tri_slot.rs
src/state/: mod.rs  simple.rs
src/strategies/: copy.rs  copy_primary.rs  mod.rs  swap_asbasb.rs  swap_rotate.rs  swap_sabs.rs  swap_scootch.rs  xip.rs
