[package]
name = "bootlick"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
embedded-storage-async = "0.4"

cortex-m = { version = "0.7", optional = true }
sequential-storage = { version = "5.0", optional = true }
postcard = { version = "1.1", optional = true }

[dev-dependencies]
embassy-futures = "0.1.1"

[features]
default = ["simple_state"]
cortex_m = ["dep:cortex-m"]
simple_state = ["dep:sequential-storage", "dep:postcard"]
