[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"

[workspace]

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [ "defmt", "stm32g431kb", "unstable-pac", "time-driver-any"]  }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }

defmt = "1.0"
defmt-rtt = "1.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-halt = "1.0.0"

embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
embedded-storage-async = "0.4"

static_cell = "2.1"

w25 = "0.6.0"

partition-manager = { git = "https://github.com/opendevicepartnership/embedded-services" }
sequential-storage = "5.0"

serde = { version = "1.0", features = ["derive"], default-features = false }
postcard = "1.1"

[profile.release]
debug = 2
lto = true
opt-level = "s"
